[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Josh Burns <joshyburnss@gmail.com>"]
readme = "README.md"
include = [
  "assets/buzz.wav"
]
packages = [
  { include = "chip8" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyglet = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
