[tool.poetry]
name = "chip8"
version = "0.1.0"
description = ""
authors = ["Josh Burns <joshyburnss@gmail.com>"]
readme = "README.md"
include = [
  "assets/buzz.wav",
  "assets/pixel.png"
]
packages = [
  { include = "chip8" }
]

[tool.poetry.scripts]
jbchip8 = 'chip8.console:run'

[tool.poetry.dependencies]
python = "3.10.10"
pyglet = "^2.0.3"
pyinstaller = "^5.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
